--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,10 @@ collections:
 plugins:
   - jekyll-feed
 
-  
+exclude:
+  - scripts/
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
