--- a/_config.yml
+++ b/_config.yml
@@ -16,29 +16,12 @@ collections:
     output: true
     permalink: /gallery/:path/
 
+sass:
+  sass_dir: _scss
+  style: :compressed
+  
 plugins:
   - jekyll-feed
 
 exclude:
   - scripts/
-
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
